# sawyer_demo

./: CMakeLists.txt  package.xml
scripts/: burger.py  manipulate.py  pose_testing.txt  pose_testing2.txt  pose_testing3.txt  pose_testing4.txt  pose_testing5.txt  scene.py  tester.py
